# Lyzer_PR_Review

./: .dockerignore  .gitignore  DEMO_CHECKLIST.md  Dockerfile  PROJECT_PROGRESS.md  ProjectRoadmapp.md  README.md  docker-compose.yml  main.py  prometheus.yml  pyproject.toml
.github/: copilot-instructions.md  docker-practices.md  ollama-setup.md
grafana/dashboards/: dashboards.yml  pr-review-dashboard.json
scripts/: github_tools.py  setup-ollama.sh
src/app/: main.py
src/app/agents/: __init__.py  base.py  logic.py  manager.py  performance.py  readability.py  security.py
src/app/api/: __init__.py  review.py
src/app/core/: __init__.py  dependencies.py  logging_config.py  settings.py
src/app/diff/: parser.py
src/app/github/: __init__.py  client.py
src/app/llm/: __init__.py  client.py
src/app/models/: __init__.py  base.py  code.py  review.py
src/app/utils/: data_processor.py  database.py
src/ui/: streamlit_app.py
tests/: conftest.py
tests/fixtures/: real_world_pr.diff
tests/integration/: test_api_endpoints.py  test_review_endpoint.py
tests/unit/: test_agents.py  test_diff_parser.py  test_github_client.py  test_llm_client.py  test_models.py
